--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Background</title>
         <link rel="icon" type="image/png" href="/mixed/img/icon16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="/mixed/img/icon19.png" sizes="19x19">
@@ -53,6 +53,7 @@
             This element must appear directly inside the <body> element, and it must not be closed properly.
             https://bugzilla.mozilla.org/show_bug.cgi?id=1603985
         -->
+        <!-- [html-validate-disable close-order] -->
         <div id="clipboard-image-paste-target" contenteditable="true">
     </body>
 </html>
