--- a/ext/bg/permissions.html
+++ b/ext/bg/permissions.html
@@ -55,7 +55,7 @@
                         as this can be used to fingerprint browser configuration.
                     </p>
                     <p>
-                        Example: <code>Origin: <span id="extension-id-example"></span></code>
+                        Example: <code>Origin: <span class="extension-id-example"></span></code>
                     </p>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                         as this can be used to fingerprint browser configuration.
                     </p>
                     <p>
-                        Example: <code>Origin: <span id="extension-id-example"></span></code>
+                        Example: <code>Origin: <span class="extension-id-example"></span></code>
                     </p>
                 </div>
             </div>
