--- a/ext/bg/pitch-accents-preview.html
+++ b/ext/bg/pitch-accents-preview.html
@@ -35,7 +35,7 @@
         <strong>Graph</strong> -
         <span class="format-preview">
             <span class="term-pitch-accent-details">
-                <svg class="term-pitch-accent-graph" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 100">
+                <svg class="term-pitch-accent-graph" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 150 100" focusable="false">
                     <path class="term-pitch-accent-graph-line" d="M25 25 L75 75"></path>
                     <path class="term-pitch-accent-graph-line-tail" d="M75 75 L125 75"></path>
                     <use href="#term-pitch-accent-graph-dot-downstep" x="25" y="25"></use>
