--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                         <div class="search-textbox-container">
-                            <textarea id="search-textbox" placeholder="Input a term, expression, sentence, or block of text" autocomplete="false" autofocus></textarea>
+                            <textarea id="search-textbox" placeholder="Input a term, expression, sentence, or block of text" autocomplete="off" autofocus></textarea>
                             <button id="search-button"><span class="icon" data-icon="magnifying-glass"></span></button>
                         </div>
                     </div>
