--- a/test/data/html/test-document2.html
+++ b/test/data/html/test-document2.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Yomichan Manual Tests</title>
-        <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==" />
-        <link rel="stylesheet" href="test-stylesheet.css" />
+        <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
+        <link rel="stylesheet" href="test-stylesheet.css">
         <script src="test-document2-script.js"></script>
     </head>
     <style id="container-styles">
@@ -47,7 +47,7 @@
         <y-description>Content inside of an open shadow DOM.</y-description>
         <div class="template-content-container"></div>
         <template>
-            <link rel="stylesheet" href="test-stylesheet.css" />
+            <link rel="stylesheet" href="test-stylesheet.css">
             <div class="fullscreen-element container"><div class="container-inner">
                 <div>
                     ありがとう
@@ -63,7 +63,7 @@
         <y-description>Content inside of a closed shadow DOM.</y-description>
         <div class="template-content-container"></div>
         <template>
-            <link rel="stylesheet" href="test-stylesheet.css" />
+            <link rel="stylesheet" href="test-stylesheet.css">
             <div class="fullscreen-element container"><div class="container-inner">
                 <div>
                     ありがとう
@@ -108,7 +108,7 @@
 
     <y-test>
         <y-description>SVG &lt;img&gt;.</y-description>
-        <img src="test-document2-frame2.svg" class="container">
+        <img src="test-document2-frame2.svg" class="container" alt="">
     </y-test>
 
     <y-test>
@@ -128,7 +128,7 @@
 
     <y-test>
         <y-description>SVG &lt;svg&gt;.</y-description>
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="container" style="background-color: #f8f8f8;">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="container" style="background-color: #f8f8f8;" focusable="false">
             <text
                 x="7"
                 y="12"
