--- a/test/data/html/test-dom-text-scanner.html
+++ b/test/data/html/test-dom-text-scanner.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Yomichan DOMTextScanner Tests</title>
-        <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==" />
-        <link rel="stylesheet" href="test-stylesheet.css" />
+        <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
+        <link rel="stylesheet" href="test-stylesheet.css">
     </head>
 <body>
 
@@ -274,7 +274,7 @@
         }'
     >
         <y-description>Skip &lt;input&gt; content.</y-description>
-<div>小ぢん<input value="content" />まり1</div>
+<div>小ぢん<input value="content">まり1</div>
     </y-test>
 
     <y-test
