--- a/test/data/html/test-document3-frame2.html
+++ b/test/data/html/test-document3-frame2.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Yomichan Manual Performance Tests</title>
-        <link rel="stylesheet" href="test-stylesheet.css" />
+        <link rel="stylesheet" href="test-stylesheet.css">
     </head>
 <body><div class="content">
 
