Settings permissions info display (#1338)
* Add getAllPermissions function

* Add permissionsChanged event

* Update ClipboardPopupsController to show permissions validation info

* Add invalid indicator

* Display invalid indicator when permissions are not valid

* Fix border color transition not being necessary on input-suffix-button

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1568,6 +1568,7 @@
     <div class="settings-group">
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
+                <div class="settings-item-invalid-indicator"></div>
                 <div class="settings-item-label">Enable background clipboard text monitoring</div>
                 <div class="settings-item-description">Open the search page in a new window when the clipboard contains Japanese text.</div>
             </div>
@@ -1577,6 +1578,7 @@
         </div></div>
         <div class="settings-item"><div class="settings-item-inner">
             <div class="settings-item-left">
+                <div class="settings-item-invalid-indicator"></div>
                 <div class="settings-item-label">Enable search page clipboard text monitoring</div>
                 <div class="settings-item-description">The query on the search page will be automatically updated with text in the clipboard.</div>
             </div>
