Permissions toggle controller (#1347)
* Move file, rename class

* Expose required permissions in an attribute

* Update selector

* Update attribute

* Fix global declaration order

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="checkbox options-advanced ignore-form-changes" data-hide-for-browser="firefox-mobile">
-                    <label><input type="checkbox" class="clipboard-toggle" data-clipboard-setting="clipboard.enableBackgroundMonitor"> Enable native popups when copying Japanese text</label>
+                    <label><input type="checkbox" class="permissions-toggle" data-permissions-setting="clipboard.enableBackgroundMonitor" data-required-permissions="clipboardRead"> Enable native popups when copying Japanese text</label>
                 </div>
 
                 <div class="checkbox options-advanced">
@@ -1316,7 +1316,7 @@
         <script src="/bg/js/settings/anki-templates-controller.js"></script>
         <script src="/bg/js/settings/audio-controller.js"></script>
         <script src="/bg/js/settings/backup-controller.js"></script>
-        <script src="/bg/js/settings/clipboard-popups-controller.js"></script>
+        <script src="/bg/js/settings/permissions-toggle-controller.js"></script>
         <script src="/bg/js/settings/dictionary-controller.js"></script>
         <script src="/bg/js/settings/dictionary-import-controller.js"></script>
         <script src="/bg/js/settings/generic-setting-controller.js"></script>
