--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1573,7 +1573,7 @@
                 <div class="settings-item-description">Open the search page in a new window when the clipboard contains Japanese text.</div>
             </div>
             <div class="settings-item-right">
-                <label class="toggle"><input type="checkbox" class="clipboard-toggle" data-clipboard-setting="clipboard.enableBackgroundMonitor"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+                <label class="toggle"><input type="checkbox" class="permissions-toggle" data-permissions-setting="clipboard.enableBackgroundMonitor" data-required-permissions="clipboardRead"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
         <div class="settings-item"><div class="settings-item-inner">
@@ -1583,7 +1583,7 @@
                 <div class="settings-item-description">The query on the search page will be automatically updated with text in the clipboard.</div>
             </div>
             <div class="settings-item-right">
-                <label class="toggle"><input type="checkbox" class="clipboard-toggle" data-clipboard-setting="clipboard.enableSearchPageMonitor"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
+                <label class="toggle"><input type="checkbox" class="permissions-toggle" data-permissions-setting="clipboard.enableSearchPageMonitor" data-required-permissions="clipboardRead"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
             </div>
         </div></div>
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
@@ -3219,7 +3219,7 @@
 <script src="/bg/js/settings/anki-templates-controller.js"></script>
 <script src="/bg/js/settings/audio-controller.js"></script>
 <script src="/bg/js/settings/backup-controller.js"></script>
-<script src="/bg/js/settings/clipboard-popups-controller.js"></script>
+<script src="/bg/js/settings/permissions-toggle-controller.js"></script>
 <script src="/bg/js/settings/dictionary-controller.js"></script>
 <script src="/bg/js/settings/dictionary-import-controller.js"></script>
 <script src="/bg/js/settings/generic-setting-controller.js"></script>
