Update chrome://extensions/shortcuts URLs to be clickable (#1342)

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -3067,12 +3067,12 @@
             </p>
 
             <ul data-show-for-browser="chrome">
-                <li>Open <a data-select-on-click="">chrome://extensions/shortcuts</a> in a new tab.</li>
+                <li>Open <a data-special-url="chrome://extensions/shortcuts">chrome://extensions/shortcuts</a> in a new tab.</li>
                 <li>Find the <em>Yomichan</em> section and configure the shortcuts.</li>
             </ul>
 
             <ul data-show-for-browser="edge">
-                <li>Open <a data-select-on-click="">edge://extensions/shortcuts</a> in a new tab.</li>
+                <li>Open <a data-special-url="edge://extensions/shortcuts">edge://extensions/shortcuts</a> in a new tab.</li>
                 <li>Find the <em>Yomichan</em> section and configure the shortcuts.</li>
             </ul>
 
