--- a/ext/bg/popup-preview.html
+++ b/ext/bg/popup-preview.html
@@ -52,6 +52,7 @@
 <script src="/fg/js/text-source-element.js"></script>
 <script src="/fg/js/popup-factory.js"></script>
 <script src="/fg/js/frontend.js"></script>
+<script src="/fg/js/frame-ancestry-handler.js"></script>
 <script src="/fg/js/frame-offset-forwarder.js"></script>
 <script src="/bg/js/settings/popup-preview-frame.js"></script>
 
