Fix settings permissions issues (#1360)
* Add missing warning indicator for the MeCab option

* Fix error handling of permissions requests

--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -1149,6 +1149,7 @@
         <div class="settings-item advanced-only">
             <div class="settings-item-inner">
                 <div class="settings-item-left">
+                    <div class="settings-item-invalid-indicator"></div>
                     <div class="settings-item-label">Parse text using <a href="https://en.wikipedia.org/wiki/MeCab" target="_blank" rel="noopener noreferrer">MeCab</a></div>
                     <div class="settings-item-description">
                         Requires a native component to be installed that Yomichan will connect to.
